[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patient-journey-builder"
version = "1.0.0"
description = "Automates pharmaceutical patient journey database creation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "PyPDF2>=3.0.0",
    "anthropic>=0.40.0",
    "tiktoken>=0.5.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "structlog>=23.2.0",
    "rich>=13.0.0",
    "tenacity>=8.2.0",
    "filelock>=3.13.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
pj-builder = "patient_journey_builder.main:main"

[project.urls]
Homepage = "https://github.com/your-org/patient-journey-builder"
Documentation = "https://github.com/your-org/patient-journey-builder#readme"
Repository = "https://github.com/your-org/patient-journey-builder.git"
Issues = "https://github.com/your-org/patient-journey-builder/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["patient_journey_builder*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=patient_journey_builder --cov-report=term-missing"
